@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[157] --> Fix Earth Shield by joschiwald.
 [156] --> Fix Glyph of Succubus. (TEST)
 [155] --> Update Sunwell Plateau by aedansilver.
 [154] --> Fix - Don't Allow Vehicles in Arena by Demonid.
